--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Diego Estevez",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "dotenv": "^12.0.3",
     "express": "^4.17.2",
     "mongoose": "^6.1.6"
