--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^12.0.3",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6"
   },
   "devDependencies": {
