--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^12.0.3",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "stripe": "^8.199.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
